# ndi-2022

./: Cargo.toml  Carte.gd  Carte.tscn  Dockerfile  Main.tscn  README.md  Rocket.toml  project.godot
.import/: atom.jpg-ec43260d0fe256939031cae87790fbc7.md5  atom.jpg-ec43260d0fe256939031cae87790fbc7.stex  atom.png-f3010cb994482295832974bb3287c9fc.md5  atom.png-f3010cb994482295832974bb3287c9fc.stex  backround.png-2c2b5bf7e96d762e0f6bd7bd3f1cc23a.md5  backround.png-2c2b5bf7e96d762e0f6bd7bd3f1cc23a.stex  poubelle.png-a4ab4563c7311c421b270cef3bf391fb.md5  poubelle.png-a4ab4563c7311c421b270cef3bf391fb.stex  virus1.png-7c889c46babbc258a10864e85999b5bf.md5  virus1.png-7c889c46babbc258a10864e85999b5bf.stex  virus2.png-55c83bec2c491b6a6d4a1292edd69987.md5  virus2.png-d6b715220a947a4eecabdc123bf08df1.stex  virus4.png-6fd44ee3a8a638a12109fda4b62fedb6.stex  virus4.png-b32d338c8be7a34e06cd314ac38967f5.md5  virus5.png-b9963fd4902c87108747bd84da92c524.md5  virus5.png-b9963fd4902c87108747bd84da92c524.stex  virus6.png-e919a73a7dc3948cb9d2f8c18a417f6d.md5  virus6.png-f0daadaa5f2d6b08385341a72edeb623.stex  virus7.png-0403c7b5f338bcfe0986b088373b924a.stex  virus7.png-14a552a960d4677e43977a029f6ed8f4.md5  virus8.png-364f6be93fb5e33db1b84f6207b3aca3.stex  virus8.png-8279d06b0d38966cd1b13536df8ad5ff.md5
app/: Cargo.toml
app/src/: main.rs  pool.rs
app/src/routes/: home.rs
app/templates/: base.html  index.html
src/: main.rs
template/: atom.jpg.import  atom.png.import  backround.png.import  poubelle.png.import  virus1.png.import  virus2.png.import  virus3png  virus4.png.import  (+4 more)
(+38 files in other folders)
