[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/djc/askama/issues/524#issuecomment-1110382504
askama = { git = "https://github.com/djc/askama.git", rev = "8142963", default-features = false, features = ["with-rocket", "mime", "mime_guess"] }
askama_rocket = { git = "https://github.com/djc/askama.git", rev = "8142963" }
async-trait = { version = "0.1" }
migration = { path = "../migration" }
rocket = "0.5.0-rc.2"
sea-orm = { version = "0.10.4", features = [ "sqlx-postgres", "runtime-tokio-rustls" ]}
sea-orm-rocket = "0.5.2"
